# sapgui.mcp

./: .env.example  .env.production  .gitignore  .gitmodules  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  PLAN_TRANSACTION_CATALOG.md  PROTOCOL_2025-12-18.md  README.md  add_table.py  batch_extract.js  batch_extract.py  convert_dd03l_to_metadata.py  current_snapshot.txt  docker-compose.yml  domain-specific-terms.txt  emma_metadata.json  emma_transp_tables.json  explore_pull_flow.py  extract_batch.js  extract_se11_fields.md  extract_se11_fields.py  extract_table.js  extract_table.py  field_descriptions.json  field_types.json  find_missing.js  find_missing_tables.js  get_missing_tables.js  malo_melo_tables.json  market_tables.json  missing_tables.json  missing_tables.txt  nginx-cdp-proxy.conf  package-lock.json  package.json  parse_se11_snapshot.js  parse_snapshot.js  parse_snapshot.py  (+21 more)
.github/: dependabot.yml
.github/workflows/: build_executable.yml  coverage.yml  formatting.yml  js_formatting.yml  linting.yml  prettier.yml  python-publish.yml  pythonlint.yml  spell_check.yml  type_check.yml  unittests.yml
customizing_roadmap/: spro_tree_full.txt
docs/: SAP_TEST_PREREQUISITES.md  bapi_catalog_update.md  bulk-operations-performance.md  pysapgui-README.md  sap_knowledge.md  sapsucker-README.md  test-plan-compact-sap-knowledge.md
docs/design/: citrix-relay-backend-design.md  sap-quick-report-design.md  sap-quick-report-implementation-plan.md  token-efficiency-design.md  token-efficiency-implementation-plan.md  websocket-relay-backend-design.md
docs/plans/: 2024-12-19-utilities-consulting-ai-tools-design.md  2026-01-02-js-extraction-design.md  2026-01-02-pydantic-tool-results-design.md  2026-01-02-sap-fill-form-design.md  2026-01-03-github-feedback-issues-design.md  2026-01-03-intent-logging-design.md  2026-01-04-dropdown-support-design.md  2026-01-04-popup-handling-design.md  2026-01-04-workflow-learning-design.md  2026-01-05-popup-semantics-design.md  2026-01-05-tool-capabilities-discovery-design.md  2026-01-07-sap-knowledge-extraction-execution-plan.md  2026-01-08-se11-lookup-tool-design.md  2026-01-08-se16-data-browser-design.md  2026-01-09-typed-test-helpers-design.md  2026-01-09-typed-test-helpers.md  2026-01-12-fm-class-catalog-design.md  2026-01-14-multi-session-implementation.md  2026-01-14-multi-session-support-design.md  2026-01-21-agent-session-binding-design.md  2026-01-21-agent-session-binding-impl.md  2026-01-23-abapgit-api-pull-design.md  2026-01-27-mcp-prompts-design.md  2026-02-13-logging-improvements-design.md  2026-02-13-logging-improvements-plan.md  2026-02-13-onboarding-prompts-design.md  2026-02-13-onboarding-prompts-plan.md  2026-02-18-exe-bundling-design.md  2026-02-18-exe-bundling-plan.md  2026-02-18-sap-identity-log-correlation-design.md  2026-02-18-sap-identity-log-correlation-plan.md  2026-02-19-pat-validation-design.md  2026-02-19-pat-validation-plan.md  2026-02-20-readme-env-vars-fix-design.md  2026-02-20-readme-env-vars-fix-plan.md  2026-02-20-se38-edit-tool-design.md  2026-02-20-se38-edit-tool-plan.md  2026-02-22-general-purpose-tools-design.md  2026-02-22-se09-transport-tool-plan.md  2026-02-22-slg1-tool-plan.md  (+28 more)
docs/testing/: workflow-sampling-copilot-setup.md  workflow-sampling-test.md
examples/pysapgui/: alv_grid_export.py  basic_navigation.py  form_filling.py  tree_navigation.py
scripts/: README.md  add_inline_results.py  consolidate_catalog.py  explore_issue_717.py  probe_dcs_full_enum.py  probe_tree_context_menu.py  recapture-snapshots.ps1  validate_pr_629.py
src/: _sapwebguimcp_version.py
src/sapguimcp/: server.py
src/sapsucker/: __init__.py  _com.py
src/sapwebguimcp/: __init__.py  lang.py  logging_config.py  server.py  utils.py
unittests/: abapgit_test_helpers.py  conftest.py  explore_se16.py  integration_helpers.py  se11_debug_ZZZNOTEXIST99.yaml  smoke_test_exe.py  test_abapgit_exploration.py  test_abapgit_tools.py  test_agent_binding_integration.py  test_aria_snapshot_type.py  test_backend_manager.py  test_backend_protocol.py  test_benchmark_capabilities.py  test_breakpoint_models.py  test_breakpoint_tools_confirmation.py  test_catalog.py  test_checkbox_radio_integration.py  test_chrome_finder.py  test_classcatalog.py  test_com_tools_unit.py  test_config.py  test_contextvar_routing.py  test_credentials_for.py  test_date_helpers.py  test_desktop_backend_reconcile.py  test_desktop_login_shared_connection_name.py  test_desktop_session_registry.py  test_emmacl_integration.py  test_ensure_screen_state.py  test_feedback_issue_handler.py  test_feedback_tags.py  test_fmcatalog.py  test_general_purpose_tools.py  test_get_session_status_per_id.py  test_keepalive_session_param.py  test_logging_config.py  test_middleware_models.py  test_models.py  test_pat_validation.py  test_prompts.py  (+57 more)
unittests/desktop/: conftest.py  test_abapgit_integration.py  test_bp_integration.py  test_breakpoint_tools_integration.py  test_com_evaluate_integration.py  test_com_evaluate_unit.py  test_com_thread.py  test_com_thread_stress.py  test_credentials_mapping_integration.py  test_desktop_backend.py  test_discover_clients_integration.py  test_discover_fields_unit.py  test_dump_tree_unit.py  test_element_finder.py  test_general_tools_integration.py  test_issue_717_integration.py  test_issue_717_tree_context_menu_integration.py  test_issue_756_bp_isolation.py  test_issue_789_session_status_integration.py  test_issue_799_alv_integration.py  test_key_mapping.py  test_login_clears_registry.py  test_login_session_lifecycle.py  test_manager_desktop.py  test_multi_session_integration.py  test_phase2_integration.py  test_phase3_integration.py  test_popup_rework_exploration.py  test_popup_rework_unit.py  test_script_tools_integration.py  test_script_tools_unit.py  test_se09_integration.py  test_se11_integration.py  test_se16_integration.py  test_se24_edit_integration.py  test_se24_integration.py  test_se37_integration.py  test_se38_edit_integration.py  test_se93_integration.py  test_slg1_integration.py  (+8 more)
unittests/sapgui/: conftest.py  test_application.py  (+31 more)
(+423 files in other folders)
