[project]
name = "sapwebguimcp"
description = "MCP server for SAP Web GUI browser automation"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Hochfrequenz Unternehmensberatung GmbH", email = "info+pip@hochfrequenz.de" }]
keywords = ["mcp", "sap", "webgui", "browser", "automation", "playwright", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mcp[cli]",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pywin32>=306; sys_platform == 'win32'",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
tests = [
    "pytest==9.0.2",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.0.0",
]
linting = [
    "pylint==4.0.4",
]
type_check = [
    "mypy[pydantic]==1.19.1",
]
spell_check = [
    "codespell==2.4.1",
]
coverage = [
    "coverage==7.13.1",
]
formatting = [
    "black==25.12.0",
    "isort==7.0.0",
]
packaging = [
    "build==1.3.0",
    "twine==6.2.0",
]
dev = [
    "pip-tools",
    "uv",
]

[project.urls]
Changelog = "https://github.com/Hochfrequenz/sapwebgui.mcp/releases"
Homepage = "https://github.com/Hochfrequenz/sapwebgui.mcp"

[project.scripts]
run-sapwebgui-mcp-server = "sapwebguimcp.server:main"

[tool.black]
line-length = 120
target_version = ["py311", "py312", "py313", "py314"]

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = "fixme,duplicate-code"

[tool.pylint.BASIC]
# Allow module-level mutable variables (singletons, caches, state)
good-names = ["_browser_manager", "_settings", "_keepalive_task", "_keepalive_interval"]

[mypy]
truethy-bool = true

[tool.mypy]
disable_error_code = []

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_sapwebguimcp_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["unittests"]
asyncio_mode = "auto"
