[project]
name = "sapwebguimcp"
description = "MCP server for SAP Web GUI browser automation"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Hochfrequenz Unternehmensberatung GmbH", email = "info+pip@hochfrequenz.de" }]
keywords = ["mcp", "sap", "webgui", "browser", "automation", "playwright", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastmcp>=2.14.0,<3.0.0",  # Standalone FastMCP v2.14+, replaces mcp[cli]
    "httpx>=0.27.0",  # HTTP client for GitHub API (feedback issue handler)
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pywin32>=306; sys_platform == 'win32'",
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
tests = [
    "pytest==9.0.2",
    "anyio==4.12.1",  # includes pytest-anyio plugin for proper async fixture teardown
    "python-dotenv>=1.0.0",
    "beautifulsoup4==4.14.3",  # HTML parsing for selector unit tests
    "lxml==6.0.2",  # Fallback parser for Python 3.13+ (html.parser has stricter nesting rules)
    "respx==0.22.0",  # Mock httpx requests in tests
]
linting = [
    "pylint==4.0.4",
]
type_check = [
    "mypy[pydantic]==1.19.1",
    "types-PyYAML==6.0.12.20250915",
]
spell_check = [
    "codespell==2.4.1",
]
coverage = [
    "coverage==7.13.4",
]
formatting = [
    "black==26.1.0",
    "isort==7.0.0",
]
packaging = [
    "build==1.4.0",
    "twine==6.2.0",
]
dev = [
    "pip-tools",
    "uv",
]

[project.urls]
Changelog = "https://github.com/Hochfrequenz/sapwebgui.mcp/releases"
Homepage = "https://github.com/Hochfrequenz/sapwebgui.mcp"

[project.scripts]
run-sapwebgui-mcp-server = "sapwebguimcp.server:main"

[tool.black]
line-length = 120
target_version = ["py311", "py312", "py313", "py314"]

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = "fixme,duplicate-code"

[tool.pylint.BASIC]
# Allow module-level mutable variables (singletons, caches, state)
good-names = ["_browser_manager", "_settings", "_keepalive_task", "_keepalive_interval"]

[mypy]
truethy-bool = true

[tool.mypy]
disable_error_code = []

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_sapwebguimcp_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/sapwebguimcp/js" = "sapwebguimcp/js"
"src/sapwebguimcp/prompts" = "sapwebguimcp/prompts"

[tool.pytest.ini_options]
testpaths = ["unittests"]
