[project]
name = "sapwebguimcp"
description = "MCP server for SAP Web GUI browser automation"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Hochfrequenz Unternehmensberatung GmbH", email = "info+pip@hochfrequenz.de" }]
keywords = ["mcp", "sap", "webgui", "browser", "automation", "playwright", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastmcp[apps]>=3.2.0,<4.0.0",  # FastMCP v3.2+ required for Choice provider (fastmcp.apps)
    "httpx>=0.27.0",  # HTTP client for GitHub API (feedback issue handler)
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pywin32>=306; sys_platform == 'win32'",
    "rapidfuzz>=3.0.0",  # Fuzzy string matching for catalog search
    "sap-mcp-config>=0.1.0",  # Shared SAP system credentials config
    "sapsucker>=0.4.0",  # Typed SAP GUI Scripting wrapper (>=0.4.0 for GuiSession.GetObjectTree fast-path dump_tree, ~50x speedup)
]
dynamic = ["readme", "version"]

[project.optional-dependencies]
tests = [
    "pytest==9.0.2",
    "anyio==4.13.0",  # includes pytest-anyio plugin for proper async fixture teardown
    "python-dotenv>=1.0.0",
    "beautifulsoup4==4.14.3",  # HTML parsing for selector unit tests
    "lxml==6.0.2",  # Fallback parser for Python 3.13+ (html.parser has stricter nesting rules)
    "respx==0.23.1",  # Mock httpx requests in tests
]
linting = [
    "pylint==4.0.5",
]
type_check = [
    "mypy[pydantic]==1.20.0",
    "types-PyYAML==6.0.12.20260408",
]
spell_check = [
    "codespell==2.4.2",
]
coverage = [
    "coverage==7.13.5",
]
formatting = [
    "black==26.3.1",
    "isort==8.0.1",
]
packaging = [
    "build==1.4.2",
    "twine==6.2.0",
]
dev = [
    "pip-tools",
    "uv",
]
build_executable = [
    "pyinstaller==6.19.0",
]

[project.urls]
Changelog = "https://github.com/Hochfrequenz/sapwebgui.mcp/releases"
Homepage = "https://github.com/Hochfrequenz/sapwebgui.mcp"

[project.scripts]
run-sapwebgui-mcp-server = "sapwebguimcp.server:main"

[tool.black]
line-length = 120
target_version = ["py311", "py312", "py313", "py314"]

[tool.isort]
line_length = 120
profile = "black"
known_third_party = ["sap_mcp_config", "sapsucker"]

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
# fixme: noise in active development (TODO/FIXME comments everywhere)
# duplicate-code: unavoidable across desktop/webgui backend implementations
disable = "fixme,duplicate-code"

[tool.pylint.BASIC]
# Allow module-level mutable variables (singletons, caches, state)
good-names = ["_browser_manager", "_settings", "_sap_config", "_keepalive_task", "_keepalive_interval"]

[mypy]
truethy-bool = true

[tool.mypy]
disable_error_code = []

[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_sapwebguimcp_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/sapwebguimcp/backend/webgui/js" = "sapwebguimcp/backend/webgui/js"
"src/sapwebguimcp/prompts" = "sapwebguimcp/prompts"

[tool.pytest.ini_options]
testpaths = ["unittests"]
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)-5s %(name)s  %(message)s"
